[project]
name = "comfyui-off-suite"
description = "Nodes:Image Crop Fit, OFF SEGS to Image, Crop Center wigh SEGS, Watermarking, GW Number Formatting Node."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/Off-Live/ComfyUI-off-suite"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI-off-suite"
Icon = ""
